changes/4.1/1d2a64bd2da6034036fff9ad9b41682516f79fa3
c6x: Makefile: Add -D__linux__

For gcc5 c6x raw compiler, at present, it may not define __linux__, so
c6x kernel still needs to define __linux__ just like another archs have
done. The related error:

  CC [M]  fs/coda/psdev.o
In file included from include/linux/coda.h:64:0,
                 from fs/coda/psdev.c:45:
include/uapi/linux/coda.h:221:2: error: unknown type name 'u_quad_t'
  u_quad_t va_size; /* file size in bytes */
  ^
include/uapi/linux/coda.h:229:2: error: unknown type name 'u_quad_t'
  u_quad_t va_bytes; /* bytes of disk space held by file */
  ^
include/uapi/linux/coda.h:230:2: error: unknown type name 'u_quad_t'
  u_quad_t va_filerev; /* file modification number */
  ^

Signed-off-by: Chen Gang <gang.chen.5i5j@gmail.com>
Signed-off-by: Mark Salter <msalter@redhat.com>

